<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vegan Kitchen</string>
    <string name="title_section1">Main Kitchen</string>
    <string name="title_section2">Recipes</string>
        <string name="sub_title_section2_1">Sweets</string>
        <string name="sub_title_section2_2">Small Dish</string>
        <string name="sub_title_section2_3">Entree</string>
        <string name="sub_title_section2_4">Drinks</string>
    <string name="title_section3">Quick Lookup</string>
    <string name="title_section4">Sharing Place</string>
    <string name="seasonal_dish_page_title">Seasonal Dish</string>
    <string name="sweets_page_title">Sweets Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">About</string>

    <!-- Individual Dish Page -->
    <string name="description"><u>Description:</u></string>
    <string name="preparation_time"><u>Estimated Preparation Time:</u></string>
    <string name="serving_size"><u>Serving Size:</u></string>
    <string name="instructions"><u>Instructions:</u></string>
    <string name="ingredients"><u>Ingredients:</u></string>
    <string name="tips"><u>Tips:</u></string>

    <!-- MealType searchable -->
    <string-array name="meal_type_searchable">
        <item>All</item>
        <item>Sweets</item>
        <item>Small Dish</item>
        <item>Entree</item>
        <item>Drinks</item>
    </string-array>

</resources>
